--- a/css/override.css
+++ b/css/override.css
@@ -12,7 +12,15 @@
           box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-
+.list-group-item-right {
+  float: right;
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+}
 
 .success {
     color: #468847;
